# hero.sql

./: LICENSE  README.md  app.py  create_app.py  pyproject.toml
.streamlit/: config.toml
database/: __init__.py  models.py
functions/: __init__.py  sql_code.py  state_functions.py  user_functions.py  view.py
pages/: create_database.py  create_soldados.py  create_titulos.py  foreign_key.py  home.py  select.py  select_step.py  use.py  verify_progress.py
